@@ -1,4 +1,2 @@
 <?xml version='1.0' standalone='yes'?>
-<posts dt="2008-03-12" tag="" user="weppos">
-  <post href="http://stacktrace.it/articoli/2008/03/i-7-peccati-capitali-del-recruitment-di-hacker/" description="Stacktrace.it: I 7 peccati capitali del recruitment di hacker" hash="2ebd5cea7e3ab24f967c07994703bb4b" others="1" tag="recruitment" time="2008-03-12T08:41:19Z" shared="no" />
-</posts>
+<post href="http://stacktrace.it/articoli/2008/03/i-7-peccati-capitali-del-recruitment-di-hacker/" description="Stacktrace.it: I 7 peccati capitali del recruitment di hacker" hash="2ebd5cea7e3ab24f967c07994703bb4b" others="1" tag="recruitment" time="2008-03-12T08:41:19Z" shared="no" />
